Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/aspire-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspire-dashboard
  namespace: cael
  labels:
    app: aspire-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspire-dashboard
  template:
    metadata:
      labels:
        app: aspire-dashboard
    spec:
      containers:
      - name: aspire-dashboard
        image: mcr.microsoft.com/dotnet/aspire-dashboard:13
        ports:
        - name: ui
          containerPort: 18888
        - name: otlp
          containerPort: 18889
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
