Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/loki-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-deployment
  namespace: cael
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:3.0.0
        args:
        - -config.file=/etc/loki/loki-single.yml
        ports:
        - containerPort: 3100
        volumeMounts:
        - name: loki-config
          mountPath: /etc/loki
        - name: loki-data
          mountPath: /loki
      volumes:
      - name: loki-config
        configMap:
          name: loki-config-configmap
      - name: loki-data
        persistentVolumeClaim:
          claimName: loki-pvc
