Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/otel-collector-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-deployment
  namespace: cael
  labels:
    app: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
      - name: collector
        image: otel/opentelemetry-collector-contrib:0.146.1
        args:
        - "--config=/etc/otelcol-contrib/otel-config.yml"
        ports:
        - containerPort: 4317
        - containerPort: 4318
        - containerPort: 8889
        volumeMounts:
        - name: otel-collector-config
          mountPath: /etc/otelcol-contrib/otel-config.yml
          subPath: otel-config.yml
      volumes:
      - name: otel-collector-config
        configMap:
          name: otel-config-configmap
