Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/postgres-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cael
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
