Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiervote
  namespace: cael
  labels:
    app: tiervote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiervote
  template:
    metadata:
      labels:
        app: tiervote
    spec:
      containers:
      - name: tiervote
        image: caelchurch/tiervote:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
