Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/aspire-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: aspire-dashboard
  namespace: cael
spec:
  selector:
    app: aspire-dashboard
  ports:
    - protocol: TCP
      name: ui
      port: 18888
      targetPort: 18888
    - protocol: TCP
      name: otlp
      port: 18889
      targetPort: 18889
