Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: cael
spec:
  selector:
    app: collector
  ports:
    - protocol: TCP
      name: otlp-grpc
      port: 4317
      targetPort: 4317
    - protocol: TCP
      name: otlp-http
      port: 4318
      targetPort: 4318
    - protocol: TCP
      name: metrics
      port: 8889
      targetPort: 8889
