Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: cael
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
