Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: cael
spec:
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
