Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cael
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
