Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: cael
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
