Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiervote
  namespace: cael
spec:
  selector:
    app: tiervote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
