Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/collector-metrics-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector-metrics
  namespace: cael
spec:
  ingressClassName: nginx
  rules:
    - host: cael-tiervote.duckdns.org
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: collector
                port:
                  number: 8889
