Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: cael
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.cael-tiervote.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
