Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: cael
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.cael-tiervote.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
