Kubernetes-reference-folder-seperate-project-dont-mix/kubernetes_zip/kubernetes/web-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiervote
  namespace: cael
spec:
  ingressClassName: nginx
  rules:
  - host: cael-tiervote.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tiervote
            port:
              number: 80
      - path: /aspire
        pathType: Prefix
        backend:
          service:
            name: aspire-dashboard
            port:
              number: 18888
